--- a/WebVisualizations/templates/data-page.html
+++ b/WebVisualizations/templates/data-page.html
@@ -1,41 +1,106 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        </title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <title>LATITUDE ANALYSIS DASHBOARD</title>
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body>
-        <ul>
-            <li><a href="{{ url_for('index') }}">Landing-page</a></li>
-            <li><a href="{{ url_for('graphic_pages') }}">Visualization-pages</a></li>
-            <li><a href="{{ url_for('analysis_page') }}">Comparisons-page</a></li>
-            <li><a href="{{ url_for ('data_page') }}">Data-page</a></li>
-
-        </ul>
-        <hr>
-        <h1>Data Page</h1>
-        <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. To accomplish this analysis , we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. After assembling the dataset, we used Mataplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trendas and correlations witnessed. </p>
-        
-        <a href="https://github.com/carlosalbertomachadopires/python-api-challenge/blob/master/WeatherPy/WeatherPyhomework.ipynb">Click here for more details</a>
-       
-        <table>
-
-            <tr>
-
-                <th>City_ID</th>
-                <th>City</th>
-                <th>Cloudness</th>
-                <th>Country</th>
-                <th>Date</th>
-                <th>Humidity</th>
-                <th>Lat</th>
-                <th>Lng</th>
-                <th>Max_Temp</th>
-                <th>Wind_Speed</th> 
+    <style>
+        p {
+            color:black;
+            font-size: 20px
             
-             </tr>
-        
-             <table>
+            
+        }     
+    
+        h1 {
+            color:black;
+            font-size: 40px;
+            font-weight: bold; 
+            text-align: center           
+        }
+
+        h2 {
+            color:black;
+            font-size: 30px;
+            font-weight: bold; 
+            
+        }
+
+        ul {
+            color:black;
+            font-size: 12px;
+                       
+        }
+        li {
+            color:black;
+            font-size: 16px; 
+                    
+            
+        }
+        a {
+            color:rgb(33, 113, 189);
+            font-weight: bold;           
+        }
+        .img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: auto;
+            
+        }
+               
+                
+    </style>
+    
+    <body>
+
+        <div>
+        <h1>DATA PAGE</h1>
+
+        </div>
+
+        <div>
+
+            <ul>
+                <li><a href="{{ url_for('index') }}">Landing-page</a></li>
+                <li><a href="{{ url_for('graphic_pages') }}">Visualization-pages</a></li>
+                <li><a href="{{ url_for('analysis_page') }}">Comparisons-page</a></li>
+                <li><a href="{{ url_for ('data_page') }}">Data-page</a></li>
+
+            </ul>
+
+        </div>
+        <hr>
+
+        <div class="container">
+
+            <h2>Reference Table</h2>
+
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. To accomplish this analysis , we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. After assembling the dataset, we used Mataplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trendas and correlations witnessed. </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+
+            <a href="https://github.com/carlosalbertomachadopires/python-api-challenge/blob/master/WeatherPy/WeatherPyhomework.ipynb">Click here for more details</a>
+            <br>
+            <br>
+            <table>     
+                    
+          
 
                 <tr>
     
@@ -47,34 +112,32 @@
                     <th>Humidity</th>
                     <th>Lat</th>
                     <th>Lng</th>
-                    <!-- <th>Max_Temp</th>
-                    <th>Wind_Speed</th>  -->
-                
-                 </tr>
+                    
+                    
+                </tr>
             
-                 {% for city in cities%}
+                {% for city in cities%}
     
-                 <tr>
-                     <td>{{ city.City_ID }}</td>
-                     <td>{{ city.City }}</td>
-                     <td>{{ city.Cloudness }}</td>
-                     <td>{{ city.Country }}</td>
-                     <td>{{ city.Date }}</td>
-                     <td>{{ city.Humidity }}</td>
-                     <td>{{ city.Lat }}</td>
-                     <td>{{ city.Lng }}</td>
-                     <!-- <td>{{ city.Max_Temp }}</td>
-                     <td>{{ city.Wind_Speed }}</td> -->
-    
-    
-                 </tr>
+                <tr>
+                    <td>{{ city.City_ID }}</td>
+                    <td>{{ city.City }}</td>
+                    <td>{{ city.Cloudness }}</td>
+                    <td>{{ city.Country }}</td>
+                    <td>{{ city.Date }}</td>
+                    <td>{{ city.Humidity }}</td>
+                    <td>{{ city.Lat }}</td>
+                    <td>{{ city.Lng }}</td>
+                    
+        
+        
+                </tr>
     
                 {% endfor %}
 
                      
 
 
-        </table>
+            </table>
 
     </body>
 
